--- a/.env.local.example
+++ b/.env.local.example
@@ -3,3 +3,4 @@ SELF_HOSTED=false
 
 # Enable Synth market data (careful, this will use your API credits)
 SYNTH_API_KEY=yourapikeyhere
+TWELVE_DATA_API_KEY=yourapikeyhere
