--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,3 +1,13 @@
+# Reference: https://docs.docker.com/build/ci/github-actions/multi-platform/#distribute-build-across-multiple-runners
+
+# Conditions for pushing the image to GHCR:
+#   - Triggered by push to a version tag (`v*`)
+#   - Triggered by a scheduled run
+#   - Triggered manually via `workflow_dispatch` with `push: true`
+#
+# Conditional expression:
+#   startsWith(github.ref, 'refs/tags/v') || github.event_name == 'schedule' || github.event.inputs.push
+
 name: Publish Docker image
 
 on:
@@ -31,7 +41,7 @@ permissions:
 jobs:
   ci:
     uses: ./.github/workflows/ci.yml
-  
+
   build:
     name: Build Docker image
     needs: [ ci ]
@@ -40,10 +50,10 @@ jobs:
       fail-fast: false
       matrix:
         platform: [amd64, arm64]
-    
+
     timeout-minutes: 60
     runs-on: ${{ matrix.platform == 'arm64' && 'ubuntu-24.04-arm' || 'ubuntu-24.04' }}
-    
+
     outputs:
       tags: ${{ steps.meta.outputs.tags }}
 
@@ -66,7 +76,7 @@ jobs:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      
+
       - name: Configure image tags
         id: tag_config
         shell: bash
@@ -91,21 +101,22 @@ jobs:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           flavor: latest=false
           tags: ${{ env.TAGS_SPEC }}
-         
-      - name: Build (and push) Docker image for ${{ matrix.platform }} by digest
+
+      - name: Publish 'linux/${{ matrix.platform }}' image by digest
         uses: docker/build-push-action@v6.16.0
         id: build
         with:
           context: .
-          push: true
-          labels: ${{ steps.meta.outputs.labels }}
+          build-args: BUILD_COMMIT_SHA=${{ github.sha }}
           platforms: 'linux/${{ matrix.platform }}'
           cache-from: type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:cache-${{ matrix.platform }}
           cache-to: type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:cache-${{ matrix.platform }},mode=max
+          labels: ${{ steps.meta.outputs.labels }}
           provenance: false
-          # https://docs.github.com/en/packages/working-with-a-github-packages-registry/working-with-the-container-registry#adding-a-description-to-multi-arch-images
+          push: true
+          # DO NOT REMOVE `oci-mediatypes=true`, fixes annotation not showing up on job.merge.steps[-1]
+          # ref: https://github.com/docker/build-push-action/discussions/1022
           outputs: type=image,name=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }},name-canonical=true,push-by-digest=true,oci-mediatypes=true
-          build-args: BUILD_COMMIT_SHA=${{ github.sha }}
 
       - name: Export the Docker image digest
         if: ${{ startsWith(github.ref, 'refs/tags/v') || github.event_name == 'schedule' || github.event.inputs.push }}
@@ -124,9 +135,9 @@ jobs:
           path: ${{ runner.temp }}/digests/*
           if-no-files-found: error
           retention-days: 1
-  
+
   merge:
-    name: Merge multi-arch manifest
+    name: Merge multi-arch manifest & push multi-arch tag
     if: ${{ startsWith(github.ref, 'refs/tags/v') || github.event_name == 'schedule' || github.event.inputs.push }}
     needs: [build]
 
@@ -135,25 +146,25 @@ jobs:
 
     permissions:
       packages: write
-    
+
     steps:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3.10.0
-      
+
       - name: Download Docker image digests
         uses: actions/download-artifact@v4.3.0
         with:
           path: ${{ runner.temp }}/digests
           pattern: digest-*
           merge-multiple: true
-      
+
       - name: Log in to the container registry
         uses: docker/login-action@v3.3.0
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      
+
       - name: Merge and push Docker image
         env:
           TAGS: ${{ needs.build.outputs.tags }}
@@ -170,7 +181,7 @@ jobs:
           for PLATFORM in amd64 arm64; do
             image_args+=("${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}@sha256:$(<"${DIGESTS_DIR}/digest-${PLATFORM}")")
           done
-          
+
           attempts=0
           until docker buildx imagetools create \
             --annotation "index:org.opencontainers.image.description=A multi-arch Docker image for the Sure Rails app" \
