--- a/.env.example
+++ b/.env.example
@@ -27,8 +27,9 @@ SYNTH_API_KEY=
 # Get it here: https://twelvedata.com/
 TWELVE_DATA_API_KEY=
 
-EXCHANGE_RATE_PROVIDER=synth # or twelve_data
-SECURITIES_PROVIDER=synth # or twelve_data
+# Optional: Twelve Data provider is the default for exchange rates and securities.
+EXCHANGE_RATE_PROVIDER=twelve_data
+SECURITIES_PROVIDER=twelve_data
 
 # Custom port config
 # For users who have other applications listening at 3000, this allows them to set a value puma will listen to.
