add db dependence on worker on our compose example file

--- a/compose.example.yml
+++ b/compose.example.yml
@@ -69,6 +69,8 @@ services:
       - app-storage:/rails/storage
     restart: unless-stopped
     depends_on:
+      db:
+        condition: service_healthy
       redis:
         condition: service_healthy
     environment:
