First cut of smallest rebrand, pending icons

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # ================================ PLEASE READ ===========================================================
-# This file outlines all the possible environment variables supported by the Maybe app for self hosting.
+# This file outlines all the possible environment variables supported by the Sure app for self hosting.
 #
 # If you're a developer setting up your local environment, please use `.env.local.example` instead.
 # ========================================================================================================
@@ -32,7 +32,7 @@ SECURITIES_PROVIDER=twelve_data
 PORT=3000
 
 # SMTP Configuration
-# This is only needed if you intend on sending emails from your Maybe instance (such as for password resets or email financial reports).
+# This is only needed if you intend on sending emails from your Sure instance (such as for password resets or email financial reports).
 # Resend.com is a good option that offers a free tier for sending emails.
 SMTP_ADDRESS=
 SMTP_PORT=465
@@ -50,7 +50,7 @@ POSTGRES_PASSWORD=postgres
 POSTGRES_USER=postgres
 
 # App Domain
-# This is the domain that your Maybe instance will be hosted at. It is used to generate links in emails and other places.
+# This is the domain that your Sure instance will be hosted at. It is used to generate links in emails and other places.
 APP_DOMAIN=
 
 # Disable enforcing SSL connections
