Add OpenID Connect login support

--- a/.env.local.example
+++ b/.env.local.example
@@ -3,3 +3,9 @@ SELF_HOSTED=false
 
 # Enable Twelve market data (careful, this will use your API credits)
 TWELVE_DATA_API_KEY=yourapikeyhere
+
+# OpenID Connect for development
+OIDC_ISSUER=https://example.com
+OIDC_CLIENT_ID=
+OIDC_CLIENT_SECRET=
+OIDC_REDIRECT_URI=http://localhost:3000/auth/openid_connect/callback
