--- a/.env.test.example
+++ b/.env.test.example
@@ -1,5 +1,11 @@
 SELF_HOSTED=false
 
+# OpenID Connect for tests
+OIDC_ISSUER=
+OIDC_CLIENT_ID=
+OIDC_CLIENT_SECRET=
+OIDC_REDIRECT_URI=http://localhost:3000/auth/openid_connect/callback
+
 # ================
 # Data Providers
 # ---------------------------------------------------------------------------------
