Add OpenID Connect login support

--- a/.env.example
+++ b/.env.example
@@ -53,6 +53,12 @@ POSTGRES_USER=postgres
 # This is the domain that your Sure instance will be hosted at. It is used to generate links in emails and other places.
 APP_DOMAIN=
 
+# OpenID Connect configuration
+OIDC_ISSUER=
+OIDC_CLIENT_ID=
+OIDC_CLIENT_SECRET=
+OIDC_REDIRECT_URI=http://localhost:3000/auth/openid_connect/callback
+
 # Disable enforcing SSL connections
 # DISABLE_SSL=true
 
