--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,7 +6,9 @@
   "containerEnv": {
     "GIT_EDITOR": "code --wait",
     "GITHUB_TOKEN": "${localEnv:GITHUB_TOKEN}",
-    "GITHUB_USER": "${localEnv:GITHUB_USER}"
+    "GITHUB_USER": "${localEnv:GITHUB_USER}",
+    "PLAID_CLIENT_ID": "foo",
+    "PLAID_SECRET": "bar"
   },
   "remoteEnv": {
     "PATH": "/workspace/bin:${containerEnv:PATH}"
