--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,15 @@ SECRET_KEY_BASE=secret-value
 # Optional self-hosting vars
 # --------------------------------------------------------------------------------------------------------
 
+# Optional: OpenAI-compatible API endpoint config
+OPENAI_ACCESS_TOKEN=
+OPENAI_URI_BASE=
+OPENAI_MODEL= 
+
+# Optional: Langfuse config
+LANGFUSE_PUBLIC_KEY=
+LANGFUSE_SECRET_KEY=
+LANGFUSE_HOST=https://cloud.langfuse.com
 
 # Optional: Twelve Data API Key for exchange rates + stock prices
 # (you can also set this in your self-hosted settings page)
