--- a/.env.example
+++ b/.env.example
@@ -63,10 +63,10 @@ POSTGRES_USER=postgres
 APP_DOMAIN=
 
 # OpenID Connect configuration
-OIDC_ISSUER=
 OIDC_CLIENT_ID=
 OIDC_CLIENT_SECRET=
-OIDC_REDIRECT_URI=http://localhost:3000/auth/openid_connect/callback
+OIDC_ISSUER=
+OIDC_REDIRECT_URI=
 
 # Product/Brand Name
 PRODUCT_NAME=
