--- a/.env.local.example
+++ b/.env.local.example
@@ -13,6 +13,12 @@ OPENAI_MODEL =
 # OPENAI_URI_BASE = http://host.docker.internal:1234/
 # OPENAI_MODEL = qwen/qwen3-vl-4b
 
+# OpenID Connect for development
+OIDC_CLIENT_ID=
+OIDC_CLIENT_SECRET=
+OIDC_ISSUER=
+OIDC_REDIRECT_URI=http://localhost:3000/auth/openid_connect/callback
+
 # Langfuse config
 LANGFUSE_PUBLIC_KEY =
 LANGFUSE_SECRET_KEY =
