--- a/.env.example
+++ b/.env.example
@@ -107,3 +107,12 @@ BRAND_NAME=
 # CLOUDFLARE_SECRET_ACCESS_KEY=
 # CLOUDFLARE_BUCKET=
 #
+# Generic S3
+# ==========
+# ACTIVE_STORAGE_SERVICE=generic_s3 <- Enables Generic S3 storage
+# GENERIC_S3_ACCESS_KEY_ID=
+# GENERIC_S3_SECRET_ACCESS_KEY=
+# GENERIC_S3_REGION=
+# GENERIC_S3_BUCKET=
+# GENERIC_S3_ENDPOINT=
+# GENERIC_S3_FORCE_PATH_STYLE= <- defaults to false
