Add runServices for db and redis in devcontainer
Signed-off-by: Juan José Mata <juanjo.mata@gmail.com>

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,6 +2,10 @@
   "name": "Sure",
   "dockerComposeFile": "docker-compose.yml",
   "service": "app",
+  "runServices": [
+    "db",
+    "redis"
+  ],
   "workspaceFolder": "/workspace",
   "containerEnv": {
     "GIT_EDITOR": "code --wait",
