Configure ONBOARDING_STATE via ENV

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,6 +1,9 @@
 # To enable / disable self-hosting features.
 SELF_HOSTED = true
 
+# Controls onboarding flow (valid: open, closed, invite_only)
+ONBOARDING_STATE = open
+
 # Enable Twelve market data (careful, this will use your API credits)
 TWELVE_DATA_API_KEY =
 
