--- a/.env.test.example
+++ b/.env.test.example
@@ -1,5 +1,8 @@
 SELF_HOSTED=false
 
+# Controls onboarding flow (valid: open, closed, invite_only)
+ONBOARDING_STATE=open
+
 # OpenID Connect for tests
 OIDC_ISSUER=
 OIDC_CLIENT_ID=
