--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,9 @@
 # Enables self hosting features (should be set to true unless you know what you're doing)
 SELF_HOSTED=true
 
+# Controls onboarding flow (valid: open, closed, invite_only)
+ONBOARDING_STATE=open
+
 # Secret key used to encrypt credentials (https://api.rubyonrails.org/v7.1.3.2/classes/Rails/Application.html#method-i-secret_key_base)
 # Has to be a random string, generated eg. by running `openssl rand -hex 64`
 SECRET_KEY_BASE=secret-value
