Feature/yahoo finance (#123)
* Implement Yahoo Finance

* Added tests

* Updated hosting controller to check for managed app_mode instead of env_override

* Suggestions from CodeRabbit and Fixes on tests

* Remove Css changes

* Fix yahoo finance impl and i18n

* Updated view to use healthy method

* remove usage

* Updated env example

* keep usage on class just to keep same format

* Ci test

* Remove some useless validations

* Remove logs

* Linter fixes

* Broke this in my conflict merge

* Wrong indentation level

---------

Signed-off-by: Juan José Mata <juanjo.mata@gmail.com>
Co-authored-by: Juan José Mata <juanjo.mata@gmail.com>

--- a/.env.example
+++ b/.env.example
@@ -35,9 +35,14 @@ LANGFUSE_SECRET_KEY=
 # Get it here: https://twelvedata.com/
 TWELVE_DATA_API_KEY=
 
-# Optional: Twelve Data provider is the default for exchange rates and securities.
+# Optional: Provider selection for exchange rates and securities data
+# Options: twelve_data (default), yahoo_finance
 EXCHANGE_RATE_PROVIDER=twelve_data
 SECURITIES_PROVIDER=twelve_data
+
+# Alternative: Use Yahoo Finance as provider (free, no API key required)
+# EXCHANGE_RATE_PROVIDER=yahoo_finance
+# SECURITIES_PROVIDER=yahoo_finance
 
 # Custom port config
 # For users who have other applications listening at 3000, this allows them to set a value puma will listen to.
