Fix token order for image tag
Signed-off-by: Juan José Mata <juanjo.mata@gmail.com>

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,7 +53,7 @@ jobs:
         if [[ "$DOCKER_IMAGE_TAG" == v*-alpha* ]]; then
           yq -i '.sure.image.tag = "${{ env.DOCKER_IMAGE_TAG }}"' platform-eks-production/apps/sure/values.yaml
           if [[ "$DOCKER_IMAGE_TAG" == v* ]]; then
-            yq -i '.sure.companion.tag = "${{ env.DOCKER_IMAGE_TAG }}"' platform-eks-production/apps/companion-staging/values.yaml
+            yq -i '.companion.image.tag = "${{ env.DOCKER_IMAGE_TAG }}"' platform-eks-production/apps/companion-staging/values.yaml
           else
             echo "No need to deploy this tag to an environment."
           fi
