Blame GPT-5 if the RegExp doesn't work
Updated regex for Docker image tag matching in deployment script.

Signed-off-by: Juan José Mata <juanjo.mata@gmail.com>

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,7 +50,7 @@ jobs:
 
     - name: Update Deployment
       run: |
-        if [[ "$DOCKER_IMAGE_TAG" == v*-alpha* ]]; then
+        if [[ "$DOCKER_IMAGE_TAG" =~ ^v[0-9][0-9.]*-alpha([.-][0-9]+)?$ ]]; then
           yq -i '.sure.image.tag = "${{ env.DOCKER_IMAGE_TAG }}"' platform-eks-production/apps/sure/values.yaml
           if [[ "$DOCKER_IMAGE_TAG" == v* ]]; then
             yq -i '.companion.image.tag = "${{ env.DOCKER_IMAGE_TAG }}"' platform-eks-production/apps/companion-staging/values.yaml
