Match pg in dev container and example.compose.yml
Signed-off-by: Juan José Mata <juanjo.mata@gmail.com>

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -50,7 +50,7 @@ services:
     restart: unless-stopped
   
   db:
-    image: postgres:latest
+    image: postgres:16
     volumes:
       - postgres-data:/var/lib/postgresql/data
     restart: unless-stopped
