Revert "Add dummy PLAID_CLIENT_ID and PLAID_SECRET to env (#165)"
This reverts commit 617876f140f6e456aeae1948413ccb32c6cf8497.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,9 +10,7 @@
   "containerEnv": {
     "GIT_EDITOR": "code --wait",
     "GITHUB_TOKEN": "${localEnv:GITHUB_TOKEN}",
-    "GITHUB_USER": "${localEnv:GITHUB_USER}",
-    "PLAID_CLIENT_ID": "foo",
-    "PLAID_SECRET": "bar"
+    "GITHUB_USER": "${localEnv:GITHUB_USER}"
   },
   "remoteEnv": {
     "PATH": "/workspace/bin:${containerEnv:PATH}"
