Add PostHog support

--- a/.env.example
+++ b/.env.example
@@ -80,6 +80,10 @@ OIDC_REDIRECT_URI=
 PRODUCT_NAME=
 BRAND_NAME=
 
+# PostHog configuration
+POSTHOG_KEY=
+POSTHOG_HOST=
+
 # Disable enforcing SSL connections
 # DISABLE_SSL=true
 
