Flatten job into single directory

--- a/config/schedule.yml
+++ b/config/schedule.yml
@@ -21,6 +21,6 @@ run_security_health_checks:
 
 sync_all_accounts:
   cron: "*/30 * * * *" # every 30 minutes
-  class: "Accounts::SyncAllJob"
+  class: "SyncAllJob"
   queue: "scheduled"
   description: "Syncs all accounts for all families"
