--- a/config/schedule.yml
+++ b/config/schedule.yml
@@ -20,7 +20,7 @@ run_security_health_checks:
   description: "Runs security health checks to detect issues with security data"
 
 sync_all_accounts:
-  cron: "*/30 * * * *" # every 30 minutes
+  cron: "0 */6 * * *" # every 6 hours
   class: "SyncAllJob"
   queue: "scheduled"
   description: "Syncs all accounts for all families"
