--- a/charts/sure/templates/migrate-job.yaml
+++ b/charts/sure/templates/migrate-job.yaml
@@ -46,51 +46,7 @@ spec:
             - |
               {{ .Values.migrations.job.args | nindent 14 }}
           env:
-            - name: RAILS_ENV
-              value: {{ .Values.rails.env | quote }}
-            - name: SECRET_KEY_BASE
-              valueFrom:
-                secretKeyRef:
-                  name: {{ include "sure.appSecretName" . }}
-                  key: SECRET_KEY_BASE
-            {{- if .Values.rails.encryptionEnv.enabled }}
-            - name: ACTIVE_RECORD_ENCRYPTION_PRIMARY_KEY
-              valueFrom:
-                secretKeyRef:
-                  name: {{ include "sure.appSecretName" . }}
-                  key: ACTIVE_RECORD_ENCRYPTION_PRIMARY_KEY
-            - name: ACTIVE_RECORD_ENCRYPTION_DETERMINISTIC_KEY
-              valueFrom:
-                secretKeyRef:
-                  name: {{ include "sure.appSecretName" . }}
-                  key: ACTIVE_RECORD_ENCRYPTION_DETERMINISTIC_KEY
-            - name: ACTIVE_RECORD_ENCRYPTION_KEY_DERIVATION_SALT
-              valueFrom:
-                secretKeyRef:
-                  name: {{ include "sure.appSecretName" . }}
-                  key: ACTIVE_RECORD_ENCRYPTION_KEY_DERIVATION_SALT
-            {{- end }}
-            {{- $dburl := include "sure.databaseUrl" . -}}
-            {{- if $dburl }}
-            - name: DB_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: {{ include "sure.dbSecretName" . }}
-                  key: {{ include "sure.dbPasswordKey" . }}
-            - name: DATABASE_URL
-              value: {{ $dburl | quote }}
-            {{- end }}
-            {{- range $k, $v := .Values.rails.settings }}
-            - name: {{ $k }}
-              value: {{ $v | quote }}
-            {{- end }}
-            {{- range $k, $v := .Values.rails.extraEnv }}
-            - name: {{ $k }}
-              value: {{ $v | quote }}
-            {{- end }}
-            {{- with .Values.rails.extraEnvVars }}
-            {{- toYaml . | nindent 12 }}
-            {{- end }}
+            {{- include "sure.env" (dict "ctx" . "includeDatabase" true "includeRedis" false) | nindent 12 }}
           {{- if .Values.rails.extraEnvFrom }}
           envFrom:
             {{- toYaml .Values.rails.extraEnvFrom | nindent 12 }}
