--- a/charts/sure/templates/simplefin-backfill-job.yaml
+++ b/charts/sure/templates/simplefin-backfill-job.yaml
@@ -45,64 +45,14 @@ spec:
             - |
               {{ .Values.simplefin.encryption.backfill.args | nindent 14 }}
           env:
-            - name: RAILS_ENV
-              value: {{ .Values.rails.env | quote }}
-            - name: SECRET_KEY_BASE
-              valueFrom:
-                secretKeyRef:
-                  name: {{ include "sure.appSecretName" . }}
-                  key: SECRET_KEY_BASE
-            {{- if .Values.rails.encryptionEnv.enabled }}
-            - name: ACTIVE_RECORD_ENCRYPTION_PRIMARY_KEY
-              valueFrom:
-                secretKeyRef:
-                  name: {{ include "sure.appSecretName" . }}
-                  key: ACTIVE_RECORD_ENCRYPTION_PRIMARY_KEY
-            - name: ACTIVE_RECORD_ENCRYPTION_DETERMINISTIC_KEY
-              valueFrom:
-                secretKeyRef:
-                  name: {{ include "sure.appSecretName" . }}
-                  key: ACTIVE_RECORD_ENCRYPTION_DETERMINISTIC_KEY
-            - name: ACTIVE_RECORD_ENCRYPTION_KEY_DERIVATION_SALT
-              valueFrom:
-                secretKeyRef:
-                  name: {{ include "sure.appSecretName" . }}
-                  key: ACTIVE_RECORD_ENCRYPTION_KEY_DERIVATION_SALT
-            {{- end }}
-            {{- $dburl := include "sure.databaseUrl" . -}}
-            {{- if $dburl }}
-            - name: DB_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: {{ include "sure.dbSecretName" . }}
-                  key: {{ include "sure.dbPasswordKey" . }}
-            - name: DATABASE_URL
-              value: {{ $dburl | quote }}
-            {{- end }}
-            {{- $redis := include "sure.redisUrl" . -}}
-            {{- if $redis }}
-            - name: REDIS_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: {{ include "sure.redisSecretName" . }}
-                  key: {{ include "sure.redisPasswordKey" . }}
-            - name: REDIS_URL
-              value: {{ $redis | quote }}
-            {{- end }}
+            {{- include "sure.env" (dict "ctx" . "includeDatabase" true "includeRedis" true) | nindent 12 }}
             # Expose dry-run also via ENV for the Rake task convenience
             - name: DRY_RUN
               value: {{ ternary "true" "false" .Values.simplefin.encryption.backfill.dryRun | quote }}
-            {{- range $k, $v := .Values.rails.settings }}
-            - name: {{ $k }}
-              value: {{ $v | quote }}
-            {{- end }}
-            {{- range $k, $v := .Values.rails.extraEnv }}
-            - name: {{ $k }}
-              value: {{ $v | quote }}
-            {{- end }}
-            {{- with .Values.rails.extraEnvVars }}
-            {{- toYaml . | nindent 12 }}
-            {{- end }}
+          {{- if .Values.rails.extraEnvFrom }}
+          envFrom:
+            {{- toYaml .Values.rails.extraEnvFrom | nindent 12 }}
+          {{- end }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
           resources:
