--- a/charts/sure/templates/worker-deployment.yaml
+++ b/charts/sure/templates/worker-deployment.yaml
@@ -45,65 +45,7 @@ spec:
               bundle exec sidekiq -C config/sidekiq.yml
           {{- end }}
           env:
-            - name: RAILS_ENV
-              value: {{ .Values.rails.env | quote }}
-            - name: SECRET_KEY_BASE
-              valueFrom:
-                secretKeyRef:
-                  name: {{ include "sure.appSecretName" . }}
-                  key: SECRET_KEY_BASE
-            {{- if .Values.rails.encryptionEnv.enabled }}
-            - name: ACTIVE_RECORD_ENCRYPTION_PRIMARY_KEY
-              valueFrom:
-                secretKeyRef:
-                  name: {{ include "sure.appSecretName" . }}
-                  key: ACTIVE_RECORD_ENCRYPTION_PRIMARY_KEY
-            - name: ACTIVE_RECORD_ENCRYPTION_DETERMINISTIC_KEY
-              valueFrom:
-                secretKeyRef:
-                  name: {{ include "sure.appSecretName" . }}
-                  key: ACTIVE_RECORD_ENCRYPTION_DETERMINISTIC_KEY
-            - name: ACTIVE_RECORD_ENCRYPTION_KEY_DERIVATION_SALT
-              valueFrom:
-                secretKeyRef:
-                  name: {{ include "sure.appSecretName" . }}
-                  key: ACTIVE_RECORD_ENCRYPTION_KEY_DERIVATION_SALT
-            {{- end }}
-            {{- $dburl := include "sure.databaseUrl" . -}}
-            {{- if $dburl }}
-            - name: DB_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: {{ include "sure.dbSecretName" . }}
-                  key: {{ include "sure.dbPasswordKey" . }}
-            - name: DATABASE_URL
-              value: {{ $dburl | quote }}
-            {{- end }}
-            {{- $redis := include "sure.redisUrl" . -}}
-            {{- if $redis }}
-            - name: REDIS_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: {{ include "sure.redisSecretName" . }}
-                  key: {{ include "sure.redisPasswordKey" . }}
-            - name: REDIS_URL
-              value: {{ $redis | quote }}
-            {{- end }}
-            {{- range $k, $v := .Values.rails.settings }}
-            - name: {{ $k }}
-              value: {{ $v | quote }}
-            {{- end }}
-            {{- range $k, $v := .Values.rails.extraEnv }}
-            - name: {{ $k }}
-              value: {{ $v | quote }}
-            {{- end }}
-            {{- with .Values.rails.extraEnvVars }}
-            {{- toYaml . | nindent 12 }}
-            {{- end }}
-            {{- range $k, $v := .Values.worker.extraEnv }}
-            - name: {{ $k }}
-              value: {{ $v | quote }}
-            {{- end }}
+            {{- include "sure.env" (dict "ctx" . "includeDatabase" true "includeRedis" true "extraEnv" .Values.worker.extraEnv) | nindent 12 }}
           {{- if or .Values.rails.extraEnvFrom .Values.worker.extraEnvFrom }}
           envFrom:
             {{- with .Values.rails.extraEnvFrom }}
