Refactor Helm chart templates for consistency and improved readability
- Simplified `simplefin-backfill-job.yaml` by quoting backfill args for cleaner rendering.
- Removed unused `extraEnvFrom` logic from `_env.tpl`.
- Streamlined `redis-simple-deployment.yaml` by restructuring `volumeMounts` and `volumes` blocks for better condition handling.

--- a/charts/sure/templates/simplefin-backfill-job.yaml
+++ b/charts/sure/templates/simplefin-backfill-job.yaml
@@ -42,8 +42,7 @@ spec:
           command:
             {{- toYaml .Values.simplefin.encryption.backfill.command | nindent 12 }}
           args:
-            - |
-              {{ .Values.simplefin.encryption.backfill.args | nindent 14 }}
+            - {{ .Values.simplefin.encryption.backfill.args | quote }}
           env:
             {{- include "sure.env" (dict "ctx" . "includeDatabase" true "includeRedis" true) | nindent 12 }}
             # Expose dry-run also via ENV for the Rake task convenience
